--- a/string utility.vcxproj
+++ b/string utility.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{d1212d56-850e-4ef1-adb3-602978d98eae}</ProjectGuid>
     <RootNamespace>stringutility</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>testcases</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
