Fixed function signature for writetoconsole. Added const to length function to allow for const strings to be read

--- a/helloworld/helloworld.vcxproj
+++ b/helloworld/helloworld.vcxproj
@@ -127,11 +127,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="..\testcases\string.cpp" />
     <ClCompile Include="helloworld.cpp" />
+    <ClCompile Include="string.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\testcases\string.hpp" />
+    <ClInclude Include="string.hpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
